# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.165 2005/01/29 05:50:28 wolf31o2 Exp $

  29 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Version 1.1.4

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1.sh:
  Added killall for gconfd-2 back into livecd-stage1.sh

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh:
  Alpha fixes for multiple kernels..

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh:
  Changed kmerge.sh from --devfs to --no-udev as --devfs doesn't exist.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/hppa-archscript.sh, livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh:
  Force devfs if udev is not selected for all supporting arches.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/x86-archscript.sh,
  livecd/runscript-support/kmerge.sh:
  Forcing devfs if livecd/dev-manager isn't udev. This should fix building 2.4
  kernels.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh:
  Re-enabled preclean in grp and added gconfd-2 killing.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Changed acpi=ht to acpi=off. This fixes acpi loading and also allows for
  users to use apm.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh,
  targets/netboot/netboot-packages.sh, targets/stage1/stage1-chroot.sh,